# BN-RUST

./: .gitignore  README.md  RUST_RENDERER_IMPLEMENTATION.md  UPLOAD_CHECKLIST.md  decompile-full.cjs  decompile.cjs  gen_icon.ps1  index.html  pack-bnex.cjs  package-lock.json  package.json  perf-test.js  test-pattern.cjs  tsconfig.json  vite.config.js  vite.config.ts
decompiled/: _INDEX.txt  bcm_saga.js  bridge_index.js  dsbridge_index.js  message_handler.js  node_modules_@crc_blink_dist_blocks_color.js.js  node_modules_@crc_blink_dist_blocks_control.js.js  node_modules_@crc_blink_dist_blocks_data.js.js  node_modules_@crc_blink_dist_blocks_defs.js.js  node_modules_@crc_blink_dist_blocks_events.js.js  node_modules_@crc_blink_dist_blocks_extensions.js.js  node_modules_@crc_blink_dist_blocks_images.js.js  node_modules_@crc_blink_dist_blocks_index.js.js  node_modules_@crc_blink_dist_blocks_logic.js.js  node_modules_@crc_blink_dist_blocks_math.js.js  node_modules_@crc_blink_dist_blocks_sensing.js.js  node_modules_@crc_blink_dist_blocks_shadows.js.js  node_modules_@crc_blink_dist_blocks_text.js.js  node_modules_@crc_blink_dist_core_constants.js.js  node_modules_@crc_blink_dist_core_di_container.js.js  node_modules_@crc_blink_dist_core_di_di_bind.js.js  node_modules_@crc_blink_dist_core_di_di_symbols.js.js  node_modules_@crc_blink_dist_core_di_index.js.js  node_modules_@crc_blink_dist_core_events_base_event.js.js  (+1159 more)
rust-renderer/: Cargo.toml
rust-renderer/src/: data.rs  lib.rs  renderer.rs  shader.wgsl  texture.rs
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+56 files in other folders)
