[package]
name = "bn-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "0.19", features = ["webgl"] }
bytemuck = { version = "1", features = ["derive"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "HtmlImageElement",
  "ImageData",
  "ImageBitmap",
  "WebGlRenderingContext",
  "console",
] }

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
