[package]
name = "better-nemo-desktop"
version = "0.1.0"
description = "BetterNemo Desktop - 编程猫扩展框架桌面版"
authors = ["BetterNemo Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-show", "window-close", "window-hide", "window-create", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
